# polygeist

./: CMakeLists.txt
mlir-clang/: CMakeLists.txt  mlir-clang.cc
mlir-clang/Lib/: clang-mlir.cc  clang-mlir.h  pragmaHandler.cc  pragmaHandler.h  syntaxHandler.cc  syntaxHandler.h  utils.cc  utils.h
mlir-clang/Lib/Plugin/Linalg/: MLIRAffineExprGen.cpp  MLIRGen.cpp  MLIRGen.h  mlirAffineExprGen.h  mlirGen.cpp  mlirGen.h
mlir-clang/Lib/Plugin/Linalg/tc/: lexer.cc  parser.cc  tree.cpp
mlir-clang/Lib/Plugin/Linalg/tc/lang/: parser.h  sema-with-range.h  tree.h
mlir-clang/Test/Verification/: plugin.c
mlir-clang/Test/polybench/linear-algebra/kernels/2mm/: 2mm.c
mlir-clang/Test/polybench/linear-algebra/kernels/3mm/: 3mm.c
mlir-clang/Test/polybench/linear-algebra/kernels/mvt/: mvt.c
plugin-linalg/: CMakeLists.txt
plugin-linalg/include/: mlirGen.h
plugin-linalg/lib/: mlirGen.cpp
plugin-linalg/plugin-opt/: plugin-opt.cpp
plugin-linalg/test/: CMakeLists.txt  gemm-mlir.tc  lit.cfg.py  matvec-mlir.tc  show-ast.tc  show-mlir.tc
